# cpp_course

./: .clang-format  .gitignore  .~lock.cpp_foundation_training.pptx#  CMakeLists.txt  README.md  VScode-setup.md  cpp_foundation_training.pptx
.cache/clangd/index/: course.cpp.72572782639A4DE7.idx  course.hpp.0E5A7F26F3A79E3F.idx  flac-song.cpp.E8FC2294ED76D552.idx  flac-song.hpp.DAADA1AA9A084410.idx  main.cpp.01CA00D1EE41D45B.idx  main.cpp.0F7CC443214C08AB.idx  main.cpp.1D16036065C1BE66.idx  main.cpp.50C8FFC64B7E1B22.idx  main.cpp.867A87838A8D0E5E.idx  main.cpp.9DCF2F2A84103CEA.idx  main.cpp.AA972B6FF834A041.idx  main.cpp.EAAF3C5B5FB21735.idx  matrix.cpp.27B0885E85634664.idx  (+14 more)
functions-fahrenheit/: CMakeLists.txt  README.md  TESTING.md  fahrenheit.cpp  fahrenheit.h  main.cpp  test_fahrenheit.cpp
int-array/: CMakeLists.txt  README.md  int-array.cpp  int-array.hpp  main.cpp
matrix/: CMakeLists.txt  README.md  main.cpp  matrix.cpp  matrix.hpp
music-player/: CMakeLists.txt  README.md  flac-song.cpp  flac-song.hpp  main.cpp  media-player.cpp  media-player.hpp  mp3-song.cpp  mp3-song.hpp  song.cpp  song.hpp
q-and-a/: CMakeLists.txt  README.md  main.cpp
school/: CMakeLists.txt  README.md  course.cpp  course.hpp  main.cpp  school.cpp  school.hpp
student/: CMakeLists.txt  README.md  main.cpp  student.cpp  student.hpp
student-manager/: CMakeLists.txt  README.md  main.cpp  student.cpp  student.hpp  student_manager.cpp  student_manager.hpp
time-conversion/: CMakeLists.txt  README.md  main.cpp
vector/: CMakeLists.txt  README.md  main.cpp  vector.hpp
